        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 17
      _ 2016-xx-xx
      * Close #98 Camera widget from map not working.
      * #96 SSL for Rest.
      % Version 16
      _ 2016-04-07
      * New function to move up/don a widget to reorder widget display.
      * Refreshing view on deletion or moving is now working correctly.
      * Working camera widget with datatype DT_VideoMjpeg in 0.4.
      * Sensor with unit in degrees now display an arrow with the value as angle.
      * Add font-awesome for future usage.
      * #38 Weather plugin sunrise/sunset and update date translate.
      * #25 Icon for new motion sensor/command.
      * Numbers are internationalised.
      * Close #93 Icon for state number.
      * Close #92 Renaming map image.
      * Close #88 Multiple Id duplication in layout.
      * Close #87 libpng warning when build.
      * Close #86 utf8 issue in DomodroidDB.java.
      * Close #85 Room ID when sync is false if saved one.
      * Close #84 Automated build on Travis-CI.
      * Close #83 Add license information.
      * Close #81 last room id in db when syncing.
      * Close #80 Adding a widget from house menu.
      * Close #79 Move widget up or down.
      * Close #77 Device ID for debugging is no more displayed.
      * Close #76 House organisation not saved.
      * Close #75 Organize area Usage by user choice at sync.
      * Close #68 Select new image for map with uri.
      * Close #33 refresh widget at root.
      * #38 More Ru and Fr translation from transifex.
      * #38 weather condtion codes translate to brasilian.
      % Version 15
      _ 2016-01-31
      * Problem when publishing to the store
      % Version 14